Code cleanup, annotations, etc