@@ -30,7 +30,7 @@ public class HomeWeatherStationSimulator {
 				if (!loggerClassName.trim().isEmpty()) {
 					try {
 						Class<? extends LoggerInterface> logClass = Class.forName(loggerClassName).asSubclass(LoggerInterface.class);
-						loggers.add(logClass.newInstance());
+						loggers.add(logClass.getDeclaredConstructor().newInstance());
 					} catch (Exception ex) {
 						ex.printStackTrace();
 					}
